@@ -10,6 +10,7 @@ import org.apache.hadoop.conf.Configuration
 import org.apache.hadoop.fs.{FSDataInputStream, FSDataOutputStream, FileSystem, Path}
 import org.apache.http.HttpResponse
 import org.apache.http.client.fluent.{Form, Request}
+import org.apache.spark.SparkCoreVersion
 import org.apache.spark.sql.SparkSession
 import org.apache.spark.sql.mlsql.session.MLSQLException
 import streaming.core.datasource.MLSQLRegistry
@@ -94,13 +95,13 @@ object PluginUtils extends Logging with WowLog {
     val dataLake = new DataLake(spark)
 
     val hdfsPath = PathFun(dataLake.identifyToPath(TABLE_FILES)).add("store").add("plugins")
-    saveStream(pluginName, fileLen, hdfsPath.toPath, fieldValue, inputStream,spark.sparkContext.hadoopConfiguration)
+    saveStream(pluginName, fileLen, hdfsPath.toPath, fieldValue, inputStream, spark.sparkContext.hadoopConfiguration)
     HDFSOperatorV2.deleteDir("." + hdfsPath.toPath + ".crc")
     (fieldValue, PathFun(hdfsPath.toPath).add(fieldValue).toPath)
 
   }
 
-  def saveStream(pluginName: String, fileLen: Long, path: String, fileName: String, inputStream: InputStream,hadoopConf:Configuration) = {
+  def saveStream(pluginName: String, fileLen: Long, path: String, fileName: String, inputStream: InputStream, hadoopConf: Configuration) = {
 
     def formatNumber(wow: Double): String = {
       if (wow == -1) return "UNKNOW"
@@ -203,20 +204,52 @@ object PluginUtils extends Logging with WowLog {
 
   def loadJarInDriver(path: String) = {
     //.getSystemClassLoader()
-    val systemClassLoader = ClassLoaderTool.getContextOrDefaultLoader.asInstanceOf[URLClassLoader]
-    val method = classOf[URLClassLoader].getDeclaredMethod("addURL", classOf[URL])
-    method.setAccessible(true)
-    method.invoke(systemClassLoader, new File(path).toURI.toURL)
+    val systemClassLoader = ClassLoaderTool.getContextOrDefaultLoader
+    if (systemClassLoader.isInstanceOf[URLClassLoader]) {
+      val method = classOf[URLClassLoader].getDeclaredMethod("addURL", classOf[URL])
+      method.setAccessible(true)
+      method.invoke(systemClassLoader, new File(path).toURI.toURL)
+    } else {
+
+      try {
+        val method = systemClassLoader.getClass()
+          .getDeclaredMethod("appendToClassPathForInstrumentation", classOf[String])
+        method.setAccessible(true)
+        method.invoke(systemClassLoader, path)
+      } catch {
+        case e: Exception =>
+          throw new RuntimeException(
+            s"""
+               |In order to dynamically install plugin in JDK[${System.getProperty("java.version")}] > 8
+               |you may need to add following to VM options:
+               |
+               |--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED
+               |
+               |""".stripMargin)
+      }
+
+    }
+
   }
 
   def checkVersionCompatibility(pluginName: String, className: String) = {
-    val versions = ClassLoaderTool.classForName(className).newInstance().asInstanceOf[VersionCompatibility].supportedVersions
-    if (!versions.contains(MLSQLVersion.version().version) || MLSQLVersion.version().version.compareTo(versions.sorted.head) < 0) {
+    val versionPatterns = ClassLoaderTool.classForName(className).newInstance().asInstanceOf[VersionCompatibility].supportedVersions
+    val mlsqlVersion = MLSQLVersion.version().version
+    val sparkVersion = SparkCoreVersion.exactVersion
+    var compatible: Boolean = false
+
+    versionPatterns.foreach(versionPattern => {
+      if (!compatible) {
+        compatible = VersionRangeChecker.isComposedVersionCompatible(versionPattern, mlsqlVersion, sparkVersion)
+      }
+    })
+
+    if (!compatible) {
       throw new MLSQLException(
         s"""
            |Plugins ${pluginName} supports:
            |
-           |${versions.mkString(",")}
+           |${versionPatterns.mkString(",")}
            |
            |Current MLSQL Engine version: ${MLSQLVersion.version().version}
             """.stripMargin)
@@ -270,3 +303,5 @@ object PluginUtils extends Logging with WowLog {
 }
 
 case class PluginStoreItem(id: Int, name: String, path: String, version: String, pluginType: Int, extraParams: String)
+
+
